added contact me form

--- a/index.html
+++ b/index.html
@@ -31,19 +31,16 @@
         </div>
         <ul class="navbar-list">
           <li>
-            <a href="#" class="navbar-link">Home</a>
+            <a href="#home" class="navbar-link">Home</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">About</a>
+            <a href="#about" class="navbar-link">About</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">Projects</a>
+            <a href="#experience" class="navbar-link">Experience</a>
           </li>
           <li>
-            <a href="#" class="navbar-link">Blog</a>
-          </li>
-          <li>
-            <a href="#" class="navbar-link">Contact</a>
+            <a href="#contact" class="navbar-link">Contact</a>
           </li>
         </ul>
       </nav>
@@ -56,11 +53,11 @@
 
   <main>
     <article>
-      <section class="section hero" aria-label="home">
+      <section class="section hero" aria-label="home" id="home">
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="static/sss.jpeg" width="560" height="540" alt="Somu the coder" class="w-100" data-reveal="top">
+            <img src="static/somu.png" width="560" alt="Somu the coder" class="w-100" data-reveal="top">
           </figure>
 
           <div class="hero-content">
@@ -73,16 +70,16 @@
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
-              <a href="#" class="btn btn-primary">See My Works</a>
+              <a href="#experience" class="btn btn-primary">See My Works</a>
 
-              <a href="#" class="btn btn-secondary">Contact Me</a>
+              <a href="#contact" class="btn btn-secondary">Contact Me</a>
             </div>
 
           </div>
 
         </div>
       </section>
-      <section class="section about" aria-label="about">
+      <section class="section about" aria-label="about" id="about">
         <div class="container">
           <div class="wrapper">
             <div data-reveal="left">
@@ -90,18 +87,19 @@
               <p class="section-text" data-reveal="top" data-reveal-delay="0.75s">
                 Hello! I'm Soma Sundaram, a Senior Technical Analyst with 17 years of experience in the IT industry.
                 Highly skilled in Java, Spring Boot, Angular, React, Bootstrap, Material UI, CSS, and JavaScript.
-                Experienced in working with Docker/Kubernetes and Apache Tomcat.
+                Experienced in working with Docker/Kubernetes and Apache Tomcat. Proven track record of leading
+                cross-functional teams and delivering innovative solutions to complex technical challenges
               </p>
             </div>
             <span class="content"></span>
           </div>
         </div>
       </section>
-      <section class="section exp" arial-label="experience">
+      <section class="section exp" arial-label="experience" id="experience">
         <div class="container">
           <h2 class="h2 section-title">Experience</h2>
           <div class="wrapper">
-            <div class="exp_list">              
+            <div class="exp_list">
               <ol class="c-timeline">
                 <li class="c-timeline__item">
                   <div class="c-timeline__content">
@@ -151,8 +149,8 @@
                 <p>Handling an internal application as Job Management System, which has 300+ unique pages. This
                   application is used to manage/hep organizations to file their filing against SEC platform. Currently
                   we are migrating this application into latest tech stack.</p>
-                <p class="bg-title"><img src="static/website.png" class="icon-img" /> Stack</p>                
-                <p>Spring boot 2.x, Java 1.8, Spring MVC, SQL Server, JSP, JQuery, Apache Tomcat 8.5.27</p>                
+                <p class="bg-title"><img src="static/website.png" class="icon-img" /> Stack</p>
+                <p>Spring boot 2.x, Java 1.8, Spring MVC, SQL Server, JSP, JQuery, Apache Tomcat 8.5.27</p>
                 <p class="bg-title"><img src="static/website.png" class="icon-img" /> New Tech Stack</p>
                 <p>Spring boot 3.x, Java Open JDK 17, React, MUI (Material UI), Typescript, Kubernetes (on-premise)</p>
                 <p class="bg-title"><img src="static/goal.png" class="icon-img" /> Roles and Responsibilities</p>
@@ -168,15 +166,22 @@
               <h2 class="card-title">Bny Mellon ▪ Chennai ▪ India</h2>
               <div class="exp_details ">
                 <h4 class="card-subtitle">Project Lead <span class="timeline">06/2015 – 11/2018</span></h4>
-                <p>Handled multiple applications, one of the major internal SPA as DR Dashboard (Disaster Recovery Dashboard). This application is used to manage all servers, network status during DR activity. This helps management to monitor the current status of server clusters and network flip during DR activity.</p>
-                <p class="bg-title"><img src="static/website.png" class="icon-img" /> Stack</p>                
-                <p>Spring 5.x, Java 1.8, Angular JS, Angular, Typescript</p>                
+                <p>Handled multiple applications, one of the major internal SPA as DR Dashboard (Disaster Recovery
+                  Dashboard). This application is used to manage all servers, network status during DR activity. This
+                  helps management to monitor the current status of server clusters and network flip during DR activity.
+                </p>
+                <p class="bg-title"><img src="static/website.png" class="icon-img" /> Stack</p>
+                <p>Spring 5.x, Java 1.8, Angular JS, Angular, Typescript</p>
                 <p class="bg-title"><img src="static/goal.png" class="icon-img" /> Roles and Responsibilities</p>
                 <ul class="list">
-                  <li>Coordinated and managed a team of five developers to successfully deliver a software project within the given timeline.</li>
-                  <li>Conducted regular progress meetings with stakeholders and provided detailed updates on project status, risks and issues.</li>
-                  <li>Prepared project documentation, including project plans, schedules, and progress reports, in accordance with company standards.</li>
-                  <li>Conducted post-project analysis to identify areas for improvement and implemented necessary changes to enhance overall project performance.</li>
+                  <li>Coordinated and managed a team of five developers to successfully deliver a software project
+                    within the given timeline.</li>
+                  <li>Conducted regular progress meetings with stakeholders and provided detailed updates on project
+                    status, risks and issues.</li>
+                  <li>Prepared project documentation, including project plans, schedules, and progress reports, in
+                    accordance with company standards.</li>
+                  <li>Conducted post-project analysis to identify areas for improvement and implemented necessary
+                    changes to enhance overall project performance.</li>
                 </ul>
               </div>
             </div>
@@ -184,27 +189,92 @@
               <h2 class="card-title">Hotcourses PVT. LTD. ▪ Chennai ▪ India</h2>
               <div class="exp_details ">
                 <h4 class="card-subtitle">Module Lead <span class="timeline">06/2008 – 06/2015</span></h4>
-                <p>Handled multiple applications, one of the major applications is Uniguru which has list of courses according to country wise. This application helps students to find out their best courses according to their interest.</p>
-                <p class="bg-title"><img src="static/website.png" class="icon-img" /> Stack</p>                
-                <p>Spring 3.x, Java 1.6, JSP, JavaScript, CSS, Apache Tomcat 7.x</p>                
+                <p>Handled multiple applications, one of the major applications is Uniguru which has list of courses
+                  according to country wise. This application helps students to find out their best courses according to
+                  their interest.</p>
+                <p class="bg-title"><img src="static/website.png" class="icon-img" /> Stack</p>
+                <p>Spring 3.x, Java 1.6, JSP, JavaScript, CSS, Apache Tomcat 7.x</p>
                 <p class="bg-title"><img src="static/goal.png" class="icon-img" /> Roles and Responsibilities</p>
                 <ul class="list">
-                  <li>Coordinated and oversaw the completion of multiple projects with a team of developers, ensuring timely delivery and adherence to project requirements.</li>
-                  <li>Conducted regular code reviews and provided feedback to team members, helping to improve the quality of code and overall efficiency of the team.</li>
-                  <li>Implemented new development methodologies and practices, such as Agile, to streamline project management and increase productivity.</li>
-                  <li>Collaborated with stakeholders to gather and analyze project requirements, and provided guidance to the team on how to best meet those requirements</li>
+                  <li>Coordinated and oversaw the completion of multiple projects with a team of developers, ensuring
+                    timely delivery and adherence to project requirements.</li>
+                  <li>Conducted regular code reviews and provided feedback to team members, helping to improve the
+                    quality of code and overall efficiency of the team.</li>
+                  <li>Implemented new development methodologies and practices, such as Agile, to streamline project
+                    management and increase productivity.</li>
+                  <li>Collaborated with stakeholders to gather and analyze project requirements, and provided guidance
+                    to the team on how to best meet those requirements</li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <section class="section contact" aria-label="contact" id="contact">
+        <div class="container">
+          <div class="contact-card">
+            <div class="contact-content" data-reveal="left">
+              <div class="card-icon">
+                <img src="static/icon-5.svg" width="44" height="44" loading="lazy" alt="envelop icon">
+              </div>
+              <h2 class="h2 section-title">Contact Me</h2>
+              <p class="section-text">
+                If you have any questions, would like to discuss a project, or need further information, please feel
+                free to get in touch using the form below. I look forward to hearing from you!
+              </p>
+            </div>
+            <form action="mailto:somu.the.code@gmail.com" class="contact-form" data-reveal="right" id="contact-form">
+              <div class="input-wrapper">
+                <input type="text" name="from_name" placeholder="Name *" required class="input-field">
+                <input type="email" name="email_address" placeholder="Email *" required class="input-field">
+              </div>
+              <textarea name="message" placeholder="Message *" required class="input-field"></textarea>
+              <input type="hidden" name="to_name" value="Soma Sundaram" />
+              <button type="submit" class="btn btn-secondary">Send message</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </article>
   </main>
+  <footer class="footer">
+    <div class="container">
+      <p class="copyright">
+        © 2024 Soma Sundaram. All rights reserved.
+      </p>
+    </div>
+  </footer>
 
   <script type="text/javascript" src="static/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"> </script>
   <script type="text/javascript" src="static/tag_cloud.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {      
+      emailjs.init({
+        publicKey: "1rOA-kOIkw7tj02e3",
+      });
+    })();
+  </script>
+  <script type="text/javascript">
+    window.onload = function () {
+      document.getElementById('contact-form').addEventListener('submit', function (event) {
+        event.preventDefault();
+        // these IDs from the previous steps
+        emailjs.sendForm('service_a6ucv4c', 'template_a6wv07p', this)
+          .then(() => {
+            console.log('SUCCESS!');
+            alert("Email sent Successfully!, Thanks for contacting me!");
+            document.getElementsByName("from_name")[0].value = "";
+            document.getElementsByName("email_address")[0].value = "";
+            document.getElementsByName("message")[0].value = "";
+          }, (error) => {
+            console.log('FAILED...', error);
+            alert("Email was not sent Successfully!, Some Technical issues!");
+          });
+      });
+    }
+  </script>
 </body>
 
 </html>
