latest design changes

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="blue" id="blue">
               <h2 class="card-title">Toppan Merrill ▪ Chennai ▪ India</h2>
               <div class="exp_details ">
-                <h4 class="card-subtitle">Senior Technical Analyst <span class="timeline">11/2018 – present</span></h4>
+                <h4 class="card-subtitle"><span>Technical Analyst</span> <span class="timeline">11/2018 – present</span></h4>
                 <p>Handling an internal application as Job Management System, which has 300+ unique pages. This
                   application is used to manage/hep organizations to file their filing against SEC platform. Currently
                   we are migrating this application into latest tech stack.</p>
@@ -165,7 +165,7 @@
             <div class="green" id="green" style="display: none;">
               <h2 class="card-title">Bny Mellon ▪ Chennai ▪ India</h2>
               <div class="exp_details ">
-                <h4 class="card-subtitle">Project Lead <span class="timeline">06/2015 – 11/2018</span></h4>
+                <h4 class="card-subtitle"><span>Project Lead</span> <span class="timeline">06/2015 – 11/2018</span></h4>
                 <p>Handled multiple applications, one of the major internal SPA as DR Dashboard (Disaster Recovery
                   Dashboard). This application is used to manage all servers, network status during DR activity. This
                   helps management to monitor the current status of server clusters and network flip during DR activity.
@@ -188,7 +188,7 @@
             <div class="red" id="red" style="display: none;">
               <h2 class="card-title">Hotcourses PVT. LTD. ▪ Chennai ▪ India</h2>
               <div class="exp_details ">
-                <h4 class="card-subtitle">Module Lead <span class="timeline">06/2008 – 06/2015</span></h4>
+                <h4 class="card-subtitle"><span>Module Lead</span> <span class="timeline">06/2008 – 06/2015</span></h4>
                 <p>Handled multiple applications, one of the major applications is Uniguru which has list of courses
                   according to country wise. This application helps students to find out their best courses according to
                   their interest.</p>
